--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-paper": "^4.0.1",
+    "react-native-paper": "3.8.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
